<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account">Account</string>
    <string name="account_number">Account number</string>
    <string name="additional">Additional</string>
    <string name="addresses">Addresses</string>
    <string name="announcements">Announcements</string>
    <string name="app">App</string>
    <string name="app_name" translatable="false">WSEI Dziekanat</string>
    <string name="app_version">App version</string>
    <string name="bank_name">Bank</string>
    <string name="birth_date">Birth date</string>
    <string name="birth_place">Birth place</string>
    <string name="citizenship">Citizenship</string>
    <string name="city">City</string>
    <string name="close">Close</string>
    <string name="code">Code</string>
    <string name="contact_details">Contact details</string>
    <string name="correspondence_address">Correspondence address</string>
    <string name="course">Course</string>
    <string name="date_of_graduation">Date of graduation</string>
    <string name="diploma_number">Diploma number</string>
    <string name="download">Download</string>
    <string name="due_date">Due date</string>
    <string name="education">Education</string>
    <string name="email">E-mail</string>
    <string name="enter_code">Enter the code</string>
    <string name="exercises">Exercises</string>
    <string name="father_maiden_name">Father\'s maiden name</string>
    <string name="father_name">Father\'s name</string>
    <string name="filter">Filter</string>
    <string name="finances">Finances</string>
    <string name="form">Form of classes</string>
    <string name="games">Games</string>
    <string name="github_repo">GitHub Repository</string>
    <string name="group">Group</string>
    <string name="high_school">High school</string>
    <string name="id_issued_by">ID issued by</string>
    <string name="instructor">Instructor</string>
    <string name="issue_date">Issue date</string>
    <string name="issue_on_github">Create an issue on GitHub</string>
    <string name="laboratories">Laboratories</string>
    <string name="landline_number">Landline number</string>
    <string name="lectures">Lectures</string>
    <string name="logging_out">Logging out…</string>
    <string name="login">Login</string>
    <string name="login_error">An error occurred while trying to login!</string>
    <string name="logout">Logout</string>
    <string name="logout_and_clear_data">Logout and clear all data</string>
    <string name="marital_status">Marital status</string>
    <string name="matura_exam_number">The number of matura exam certificate</string>
    <string name="matura_type">Matura type</string>
    <string name="military_book_number">Military book number</string>
    <string name="mother_maiden_name">Mother\'s maiden name</string>
    <string name="mother_name">Mother\'s name</string>
    <string name="name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="nip" translatable="false">NIP</string>
    <string name="open_repo">Open the GitHub repository in a browser</string>
    <string name="other_universities">Other universities</string>
    <string name="passport">Passport</string>
    <string name="password">Password</string>
    <string name="payment">Payment</string>
    <string name="payment_state">State</string>
    <string name="permanent_residence_address">Permanent residence address</string>
    <string name="personal">Personal</string>
    <string name="pesel" translatable="false">PESEL</string>
    <string name="phone_number">Phone number</string>
    <string name="post_code">Post code</string>
    <string name="postal_office">Postal office</string>
    <string name="previous_place_of_residence">Previous place of residence</string>
    <string name="private_email">Private e-mail</string>
    <string name="remaining_amount">Remaining amount</string>
    <string name="report_bug">Report a bug</string>
    <string name="room">Location</string>
    <string name="schedule">Schedule</string>
    <string name="school">School</string>
    <string name="second_name">Second Name</string>
    <string name="seminars">Seminars</string>
    <string name="series_and_number_of_identity_card">Series and number of identity card</string>
    <string name="settings">Settings</string>
    <string name="sex">Sex</string>
    <string name="shoot_spaceships">Shoot the alien spaceships</string>
    <string name="show">Show</string>
    <string name="sign_in">Sign In</string>
    <string name="snake_survive">Survive as long as you can</string>
    <string name="specialization">Specialization</string>
    <string name="street">Street</string>
    <string name="surname">Surname</string>
    <string name="sync_auto">Synchronize automatically</string>
    <string name="sync_auto_summary">Automatically synchronize data with the Virtual Dean\'s Office</string>
    <string name="sync_error">There was an error while synchronizing!</string>
    <string name="sync_header">Synchronization</string>
    <string name="sync_now">Synchronize now</string>
    <string name="sync_now_summary">Update app data</string>
    <string name="sync_started">Synchronization started!</string>
    <string name="sync_success">Data synchronized successfully!</string>
    <string name="time_from">Time from</string>
    <string name="time_to">Time to</string>
    <string name="universities">Universities</string>
    <string name="university_name">University name</string>
    <string name="work_experience">Work experience</string>
    <string name="year_of_graduation">Year of graduation</string>
    <string name="your_data">Your data</string>
    <string name="grades">Grades</string>
    <string name="new_version">New version available</string>
</resources>