<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync_auto"
            app:summary="@string/sync_auto_summary"
            app:enabled="false"
            app:title="@string/sync_auto" />

        <Preference
            app:key="sync_now"
            app:summary="@string/sync_now_summary"
            app:title="@string/sync_now" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/games">

        <Preference
            app:key="snake_game"
            app:summary="@string/snake_survive"
            app:title="Snake" />

        <Preference
            app:key="pacman_game"
            app:summary="Waka! Waka! Waka!"
            app:title="Pac-Man" />

        <Preference
            app:key="space_invaders_game"
            app:summary="@string/shoot_spaceships"
            app:title="Space Invaders" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app">

        <Preference
            app:key="github"
            app:summary="@string/open_repo"
            app:title="@string/github_repo" />

        <Preference
            app:key="report_bug"
            app:summary="@string/issue_on_github"
            app:title="@string/report_bug" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account">

        <Preference
            app:key="logout"
            app:summary="@string/logout_and_clear_data"
            app:title="@string/logout" />

    </PreferenceCategory>

</PreferenceScreen>