<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingBottom="4dp"
    tools:context=".ui.schedule.ScheduleDialogFragment">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="16dp"
        tools:text="Czwartek, 7 Stycznia"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_from"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/time_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="12:00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/instructor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/instructor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="Jan Kowalski" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/group"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="W/1/S" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_to"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/time_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="13:30" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/form"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="Wyk" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/room"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="F Meksyk" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
