<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="18dp"
    android:paddingBottom="4dp"
    tools:context=".ui.payments.PaymentDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="2021-10-11" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/payment"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="750 PLN" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_state"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="Uregulowane" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Kwota stanu"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/amountNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp"
                tools:text="0 PLN" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="Dodatkowe" />

    <TextView
        android:id="@+id/additional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="12sp"
        tools:text="Lorem ipsum dolor sit amet" />
</LinearLayout>
